fix: dark mode issues fix: height of circle

--- a/includes/admin/page-optimizer/src/index.css
+++ b/includes/admin/page-optimizer/src/index.css
@@ -76,3 +76,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.rapidload-dark {
+  color-scheme: dark;
+}
